# bitcoin

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  configure
ci/: check_performance.sh  test_run_all.sh  test_runner.sh
cmake/: bitgold-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  minisketch.cmake
contrib/: README.md  stake_monitor.py
depends/: toolchain.cmake.in
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  api.md  assumeutxo.md  bip32-prefixes.md  bips.md  bitcoin-conf.md  bitcoin-core-diff.md  bitgold-spec.md  bitgoldstaking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  bulletproof-serialization.md  bulletproofs.md  cjdns.md  confidential-addresses.md  configuration.md  dependencies.md  descriptors.md  developer-notes.md  dns-seeding.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  governance-policy.md  i2p.md  init.md  managing-wallets.md  merkle-proof-bench.md  multiprocess.md  multisig-tutorial.md  networking.md  offline-signing-tutorial.md  (+22 more)
src/: CMakeLists.txt  addrdb.cpp  addrman.cpp  bitcoin-chainstate.cpp  bitcoin-res.rc  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind.cpp  bitgold-cli-res.rc  bitgold-cli.cpp  bitgoldd-res.rc  bitgoldd.cpp  bulletproofs.h  bulletproofs_utils.h  chain.h  chainparams.cpp  noui.h  (+31 more)
src/wallet/test/: CMakeLists.txt  coinselector_tests.cpp  spend_tests.cpp  util.h  wallet_tests.cpp
src/wallet/test/fuzz/: CMakeLists.txt  coinselection.cpp
(+579 files in other folders)
